[#10036 #293333]: - добавлен тест с тасками у которых одинаковые имена;